--- a/final.html
+++ b/final.html
@@ -22,26 +22,26 @@
   </header>
   <section class="showcase">
     
-    <img src="./final/lap.jpeg" class="showcase__img" alt="laptop image">
+    <img src="lap.jpeg" class="showcase__img" alt="laptop image">
 
   </section>
 
   <!-- article.description>(.container>img+h2+p)*3 -->
   <article class="description">
     <div class="container">
-      <img src="./final/html.png" alt="Html Image">
+      <img src="html.png" alt="Html Image">
       <h2>HTML</h2>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod atque sed mollitia illo voluptate ipsa, numquam
         consequatur eaque itaque cupiditate?</p>
     </div>
     <div class="container">
-      <img src="./final/css.png" alt="css Img">
+      <img src="css.png" alt="css Img">
       <h2>CSS3</h2>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi quo laudantium deleniti atque quibusdam
         voluptate eligendi est nobis placeat aliquam.</p>
     </div>
     <div class="container">
-      <img src="./final/icon.png" alt="JavaScript Img">
+      <img src="icon.png" alt="JavaScript Img">
       <h2>JavaScript</h2>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla distinctio nobis a sunt placeat sequi ratione
         nostrum labore dolor culpa.</p>
